--- a/bio.html
+++ b/bio.html
@@ -65,7 +65,8 @@
 									<section>
 										<h3 class="major">Research Interests</h3>
 										<p>Graduating from the Department of Communication at Cornell University in 2019, my research focuses on how communication changes in different cultures and contexts and how various populations adopt and adapt to traditional and new communication technologies to achieve their instrumental, social, emotional, and psychological goals. My training in the doctoral program directs my research to take a sociopsychological approach, and I use both qualitative methods (e.g., field observation and in-depth interview) and quantitative ones (e.g., surveys and experiments) in my research endeavors.</p>
-										<p>Before I obtained the Taiwanese citizenship in January, 2022, I have been (and still am) a postdoctoral researcher in the IoX Center at National Taiwan University, championed by Prof. Yung-Jen Hsu. During my postdoctoral years, I have collaborated extensively with colleagues from computer science and relevant industries. I have therefore extended my research fields to information science, design, and user studies relating to artificial intelligence (AI). </p>
+										<p>Before I obtained the Taiwanese citizenship, I have been a postdoctoral researcher in the IoX Center at National Taiwan University, championed by Prof. Yung-Jen Hsu. During my postdoctoral years, I have collaborated extensively with colleagues from computer science and relevant industries. I have therefore extended my research fields to information science, design, and user studies relating to artificial intelligence (AI). </p>
+										<p>In August 2022, I joined the Department of Information Management at National Taiwan University as an assistant professor.</p>
 
 									</section>
 
